# pen_plotter

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  plan.md  plotter_gui.spec  pyproject.toml
data/: char_complexity.json
data_examples/inkscape_ext/: axidraw.inx  (+24 more)
docs/: gradio_webserial_plotter.md  plotter_gui_build.md  plotter_gui_checklist.md  書式リファレンス.md
hardware/: cad_advice.md
notebooks/: colab_pretrain.ipynb
plans/: plan_001.md  plan_002.md  plan_003.md
reports/: theory.txt
scripts/: batch_import_report.py  build_exe.bat  calibrate_finish_lift.py  calibrate_pen_z.py  check_math_render.py  collect_strokes.py  compare_handwriting.py  compute_char_complexity.py  debug_render_char.py  diagnose_layout.py  finetune.py  import_scan.py  prepare_casia.py  prepare_kanjivg.py  pretrain.py  preview_batch.py  preview_inference.py  run_plotter_gui.py  run_ui.py  send_gcode_win.py  train_model.py  xdraw_console.py
tests/: comm_mocks.py  conftest.py  test_app_dispatch.py  test_app_send_flow.py  test_augmentation.py  test_calibration.py  test_casia_parser.py  test_char_complexity.py  test_char_encoder.py  test_char_metrics.py  test_data_format.py  test_data_utils.py  test_dataset.py  test_finetune.py  test_gcode_config.py  test_gcode_generator.py  test_gcode_optimizer.py  test_gcode_preview.py  test_gradio_app.py  test_grbl_controller.py  test_import_scan.py  test_inference.py  test_ipad_sync.py  test_kanjivg_parser.py  test_layout_diagnostics.py  test_line_breaking.py  test_math_layout.py  test_math_skeletonize.py  test_page_layout.py  test_pink_noise.py  test_plotter_gui_smoke.py  test_plotter_worker.py  test_port_finder.py  test_prepare_casia.py  test_prepare_kanjivg.py  test_pretrain.py  test_preview.py  test_preview_renderer.py  test_profiles.py  test_resources.py  (+16 more)
(+8936 files in other folders)
