[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "pen-plotter"
version = "0.1.0"
description = "手書き風文字生成ペンプロッタ制御プログラム"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "pyserial",
]

[project.optional-dependencies]
ml = ["torch", "torchvision", "scipy"]
ui = ["gradio"]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: 実行に時間がかかるテスト（MLなど）",
    "hardware: 実機接続が必要なテスト",
]
