[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pen-plotter"
version = "0.1.0"
description = "手書き風文字生成ペンプロッタ制御プログラム"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "pyserial",
    "scikit-image>=0.26.0",
    "cairosvg",
]

[project.optional-dependencies]
ml = ["torch==2.12.0", "torchvision==0.25.0", "scipy"]
ui = ["gradio"]
dev = ["pytest", "ruff"]
build = ["pyinstaller"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: 実行に時間がかかるテスト（MLなど）",
    "hardware: 実機接続が必要なテスト",
]
